# simple-embedded-sse-server

./: README.md  example.py  pyproject.toml
jamsocket_embedded_stream_server/: __init__.py
