[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jamsocket_embedded_stream_server"
version = "0.1.0"
description = "An embedded stream server."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask==3.0.3",
    "structlog==24.4.0",
    "waitress==3.0.0",
]
